# obs-remote-capture

./: .gitignore  CMakeLists.txt  CMakePresets.json  buildspec.json  vcpkg.json
proto/: remote_capture.proto
src/: audio-stream.cpp  capture-preview-source.cpp  codec_ffmpeg.cpp  codec_ffmpeg.h  codec_jpeg.cpp  codec_raw.cpp  flow_meter.cpp  flow_meter.h  grpc_client.cpp  grpc_client.h  grpc_server.cpp  net-protocol.h  plugin-main.c  plugin-utils.h  remote-client-source.cpp  remote-server.cpp  session_monitor.cpp  session_monitor.h  srt_transport.cpp  srt_transport.h  video_codec.cpp  video_codec.h
